--- a/Derivatives.cabal
+++ b/Derivatives.cabal
@@ -22,7 +22,7 @@ library
 executable Derivatives
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , Derivatives
   default-language:    Haskell2010
@@ -32,8 +32,9 @@ test-suite Derivatives-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
+                     , hspec
                      , Derivatives
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
